--- a/mutiny_loading/interface/src/assets/index.scss
+++ b/mutiny_loading/interface/src/assets/index.scss
@@ -1,47 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-.title {
-  position: relative;
-  top: 125vh;
-  color: whitesmoke;
-  text-shadow: rgba(0, 0, 0, 0.25) -1px 5px 2.5px;
-  font-family: "Poppins", sans-serif;
-  font-size: 76px;
-  opacity: 0.7;
-  font-weight: 700;
-}
-
-.subtitle {
-  position: relative;
-  top: 150vh;
-  color: whitesmoke;
-}
-
 body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   overflow: hidden;
-
-  .vertical-centered-box {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    &:after {
-      content: "";
-      display: inline-block;
-      height: 100%;
-      vertical-align: middle;
-      margin-right: -0.25em;
-    }
-    .content {
-      box-sizing: border-box;
-      display: inline-block;
-      vertical-align: middle;
-      text-align: left;
-      font-size: 0;
-    }
-  }
+  background: mix(#3f3251, #002025, 70%);
+  background-image: url("https://cdn.discordapp.com/attachments/1161385720053760070/1163522170467659867/AfHBLw6.gif?ex=653fe176&is=652d6c76&hm=d0ee7446699f555bf4cf69fc7e37335e319afcafca3963e335fdedfce500d4f7&");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  height: 100vh;
+  width: 100vw;
 }
 
 * {
@@ -78,24 +48,6 @@ body {
     border-radius: 50%;
     box-shadow: inset 0 0 0 2px mix(#718dad, #ffffff, 70%);
   }
-}
-
-#particles-background,
-#particles-foreground {
-  left: -51%;
-  top: -51%;
-  width: 202%;
-  height: 202%;
-  transform: scale3d(0.5, 0.5, 1);
-}
-
-#particles-background {
-  background: mix(#3f3251, #002025, 70%);
-  background-image: url("https://cdn.discordapp.com/attachments/1161385720053760070/1163522170467659867/AfHBLw6.gif?ex=653fe176&is=652d6c76&hm=d0ee7446699f555bf4cf69fc7e37335e319afcafca3963e335fdedfce500d4f7&");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
 }
 
 @keyframes rotate {
@@ -137,6 +89,8 @@ svg text {
   stroke-width: 2;
   stroke: #ffffff;
   font-size: 100px;
+  font-weight: 500;
+  text-shadow: rgba(0, 0, 0, 0.247) -1px 5px 2.5px;
 }
 @keyframes stroke {
   0% {
@@ -166,5 +120,6 @@ svg text {
 
 .wrapper {
   position: relative;
-  top: 60%;
+  width: 100vw;
+  right: 46vw;
 }
